feat: Add level query string parameter to notes endpoint
